--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -94,10 +94,18 @@ jobs:
         env:
           VERSION: ${{ matrix.version }}
 
-
       - name: Generate Dockerfiles
         run: |
           make gen-dockerfiles
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          install: true
 
       # ------------------------------------------------------------
       # Base
