--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -98,181 +98,75 @@ jobs:
           VERSION: ${{ matrix.version }}
 
 
+      - name: Generate Dockerfiles
+        run: |
+          make gen-dockerfiles
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+        with:
+          install: true
+
       # ------------------------------------------------------------
       # Base
       # ------------------------------------------------------------
-      - name: Build Base
-        run: |
-          retry() {
-            for n in $(seq ${RETRIES}); do
-              echo "[${n}/${RETRIES}] ${*}";
-              if eval "${*}"; then
-                echo "[SUCC] ${n}/${RETRIES}";
-                return 0;
-              fi;
-              sleep ${PAUSE};
-              echo "[FAIL] ${n}/${RETRIES}";
-            done;
-            return 1;
-          }
-          retry make _pull-base-image VERSION=${VERSION}
-          retry make build-base VERSION=${VERSION}
-        env:
-          VERSION: ${{ matrix.version }}
-          RETRIES: 5
-          PAUSE: 10
-
-      - name: Test Base
-        run: |
-          retry() {
-            for n in $(seq ${RETRIES}); do
-              echo "[${n}/${RETRIES}] ${*}";
-              if eval "${*}"; then
-                echo "[SUCC] ${n}/${RETRIES}";
-                return 0;
-              fi;
-              sleep ${PAUSE};
-              echo "[FAIL] ${n}/${RETRIES}";
-            done;
-            return 1;
-          }
-          retry make test-base VERSION=${VERSION}
-        env:
-          VERSION: ${{ matrix.version }}
-          RETRIES: 5
-          PAUSE: 10
-
+      - name: Build Base And Push
+        id: docker_build_base
+        uses: docker/build-push-action@v2
+        with:
+          context: ./Dockerfiles/base
+          file: ./Dockerfiles/base/Dockerfile-${{ matrix.version }}
+          builder: ${{ steps.buildx.outputs.name }}
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/php-fpm:${{ matrix.version }}-base
+          platforms: linux/amd64,linux/arm64
 
       # ------------------------------------------------------------
       # Mods
       # ------------------------------------------------------------
-      - name: Build Mods
-        run: |
-          retry() {
-            for n in $(seq ${RETRIES}); do
-              echo "[${n}/${RETRIES}] ${*}";
-              if eval "${*}"; then
-                echo "[SUCC] ${n}/${RETRIES}";
-                return 0;
-              fi;
-              sleep ${PAUSE};
-              echo "[FAIL] ${n}/${RETRIES}";
-            done;
-            return 1;
-          }
-          retry make build-mods VERSION=${VERSION}
-        env:
-          VERSION: ${{ matrix.version }}
-          RETRIES: 5
-          PAUSE: 10
-
-      - name: Test Mods
-        run: |
-          retry() {
-            for n in $(seq ${RETRIES}); do
-              echo "[${n}/${RETRIES}] ${*}";
-              if eval "${*}"; then
-                echo "[SUCC] ${n}/${RETRIES}";
-                return 0;
-              fi;
-              sleep ${PAUSE};
-              echo "[FAIL] ${n}/${RETRIES}";
-            done;
-            return 1;
-          }
-          retry make test-mods VERSION=${VERSION}
-        env:
-          VERSION: ${{ matrix.version }}
-          RETRIES: 5
-          PAUSE: 10
-
+      - name: Build Mods And Push
+        id: docker_build_mods
+        uses: docker/build-push-action@v2
+        with:
+          context: ./Dockerfiles/mods
+          file: ./Dockerfiles/mods/Dockerfile-${{ matrix.version }}
+          builder: ${{ steps.buildx.outputs.name }}
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/php-fpm:${{ matrix.version }}-mods
+          platforms: linux/amd64,linux/arm64
 
       # ------------------------------------------------------------
       # Prod
       # ------------------------------------------------------------
-      - name: Build Prod
-        run: |
-          retry() {
-            for n in $(seq ${RETRIES}); do
-              echo "[${n}/${RETRIES}] ${*}";
-              if eval "${*}"; then
-                echo "[SUCC] ${n}/${RETRIES}";
-                return 0;
-              fi;
-              sleep ${PAUSE};
-              echo "[FAIL] ${n}/${RETRIES}";
-            done;
-            return 1;
-          }
-          retry make build-prod VERSION=${VERSION}
-        env:
-          VERSION: ${{ matrix.version }}
-          RETRIES: 5
-          PAUSE: 10
-
-      - name: Test Prod
-        run: |
-          retry() {
-            for n in $(seq ${RETRIES}); do
-              echo "[${n}/${RETRIES}] ${*}";
-              if eval "${*}"; then
-                echo "[SUCC] ${n}/${RETRIES}";
-                return 0;
-              fi;
-              sleep ${PAUSE};
-              echo "[FAIL] ${n}/${RETRIES}";
-            done;
-            return 1;
-          }
-          retry make test-prod VERSION=${VERSION}
-        env:
-          VERSION: ${{ matrix.version }}
-          RETRIES: 5
-          PAUSE: 10
-
+      - name: Build Prod And Push
+        id: docker_build_prod
+        uses: docker/build-push-action@v2
+        with:
+          context: ./Dockerfiles/prod
+          file: ./Dockerfiles/prod/Dockerfile-${{ matrix.version }}
+          builder: ${{ steps.buildx.outputs.name }}
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/php-fpm:${{ matrix.version }}-prod
+          platforms: linux/amd64,linux/arm64
 
       # ------------------------------------------------------------
       # Work
       # ------------------------------------------------------------
-      - name: Build Work
-        run: |
-          retry() {
-            for n in $(seq ${RETRIES}); do
-              echo "[${n}/${RETRIES}] ${*}";
-              if eval "${*}"; then
-                echo "[SUCC] ${n}/${RETRIES}";
-                return 0;
-              fi;
-              sleep ${PAUSE};
-              echo "[FAIL] ${n}/${RETRIES}";
-            done;
-            return 1;
-          }
-          retry make build-work VERSION=${VERSION}
-        env:
-          VERSION: ${{ matrix.version }}
-          RETRIES: 5
-          PAUSE: 10
-
-      - name: Test Work
-        run: |
-          retry() {
-            for n in $(seq ${RETRIES}); do
-              echo "[${n}/${RETRIES}] ${*}";
-              if eval "${*}"; then
-                echo "[SUCC] ${n}/${RETRIES}";
-                return 0;
-              fi;
-              sleep ${PAUSE};
-              echo "[FAIL] ${n}/${RETRIES}";
-            done;
-            return 1;
-          }
-          retry make test-work VERSION=${VERSION}
-        env:
-          VERSION: ${{ matrix.version }}
-          RETRIES: 5
-          PAUSE: 10
+      - name: Build Work And Push
+        id: docker_build_work
+        uses: docker/build-push-action@v2
+        with:
+          context: ./Dockerfiles/work
+          file: ./Dockerfiles/work/Dockerfile-${{ matrix.version }}
+          builder: ${{ steps.buildx.outputs.name }}
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/php-fpm:${{ matrix.version }}-work
+          platforms: linux/amd64,linux/arm64
 
 
       # ------------------------------------------------------------
@@ -311,22 +205,6 @@ jobs:
           echo "DOCKER_TAG_MODS=${DOCKER_TAG_MODS}"
           echo "DOCKER_TAG_PROD=${DOCKER_TAG_PROD}"
           echo "DOCKER_TAG_WORK=${DOCKER_TAG_WORK}"
-
-          # Tag image
-          retry make tag OLD_TAG="${VERSION}-base" NEW_TAG="${DOCKER_TAG_BASE}"
-          retry make tag OLD_TAG="${VERSION}-mods" NEW_TAG="${DOCKER_TAG_MODS}"
-          retry make tag OLD_TAG="${VERSION}-prod" NEW_TAG="${DOCKER_TAG_PROD}"
-          retry make tag OLD_TAG="${VERSION}-work" NEW_TAG="${DOCKER_TAG_WORK}"
-          docker images
-
-          # Login
-          retry make login USERNAME=${{ secrets.DOCKERHUB_USERNAME }} PASSWORD=${{ secrets.DOCKERHUB_PASSWORD }}
-
-          # Push
-          retry make push TAG=${DOCKER_TAG_BASE}
-          retry make push TAG=${DOCKER_TAG_MODS}
-          retry make push TAG=${DOCKER_TAG_PROD}
-          retry make push TAG=${DOCKER_TAG_WORK}
         env:
           VERSION: ${{ matrix.version }}
           RETRIES: 5
